fixed Terms of Service align to right bottom when user won’t login

--- a/docroot/sites/all/themes/SBAC/sass/custom.scss
+++ b/docroot/sites/all/themes/SBAC/sass/custom.scss
@@ -580,7 +580,7 @@ input[type="file"], input[type="checkbox"], input[type="radio"], select{
         color: inherit;
         font-size: 0.75em;
         padding-left: 55px;
-        padding-right: 25px;
+        padding-right: 0;
         background: url('../images/icons/terms-small.png') 33px center no-repeat;
 
         &.help {
@@ -603,14 +603,19 @@ input[type="file"], input[type="checkbox"], input[type="radio"], select{
 
   .footer-links {
    overflow: visible !important;
+		&.inline-list > li {
+			float: right;
+		}
   }
 
   .footer-help{
     position: relative;
+		padding-right: 50px;
+		padding-left: 25px;
 
     #drop2 {
       top: -98px !important;
-      left: -5px !important;
+      left: 20px !important;
       height: auto;
       display: none;
 
